--- a/laxyam/padyam/kAlidAsaH/raghuvaMsham/sarva-prastutiH/02.md
+++ b/laxyam/padyam/kAlidAsaH/raghuvaMsham/sarva-prastutiH/02.md
@@ -17,10 +17,13 @@ unicode_script = "devanagari"
 
 ### दम्पतिभ्याम्
 
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 अथ प्रजानाम् **अधिपः** प्रभाते  
 जाया-प्रतिग्राहित-गन्ध-माल्यम्।  
 **वनाय** पीत-प्रतिबद्ध-वत्साय्ँ  
 यशोधनो **धेनुम्** ऋषेर् **मुमोच** ॥ १ ॥  
+</details>
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/01.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
@@ -28,11 +31,13 @@ unicode_script = "devanagari"
 </details>
 </div>
 
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 **तस्याः** खुर-न्यास-पवित्र-पांसुम्  
 अपांसुलानान् धुरि कीर्तनीया +++(राज्ञी)+++ ।  
 **मार्गम्** मनुष्येश्वर-धर्मपत्नी  
 श्रुतेर् इवार्थं स्मृतिर् **अन्वगच्छत्** ॥ २ ॥+++(र५ अ५)+++    
+</details>
 
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/02.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
@@ -41,10 +46,13 @@ unicode_script = "devanagari"
 </details>
 </div>
 
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 **निवर्त्य राजा** दयितान् दयालुस्  
 **तां** सौरभेयीं सुरभिर्+++(=मनोज्ञः)+++ यशोभिः ।  
 पयो-धरी-भूत-चतुः-समुद्राञ् +++(उर्वीं)+++  
 **जुगोप** गोरूप-धराम् इवोर्वीम् ॥ ३ ॥  
+</details>
 
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/03.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
@@ -56,10 +64,13 @@ unicode_script = "devanagari"
 
 ### व्रतप्रकारः
 
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 व्रताय तेनानुचरेण धेनोर्  
 **न्यषेधि** शेषो ऽप्य् **अनुयायि-वर्गः** ।  
 न चान्यतस् तस्य शरीर-रक्षा  
 स्व-वीर्य-गुप्ता हि मनोः प्रसूतिः ॥ ४ ॥+++(र५ अ५)+++    
+</details>
 
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/04.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
@@ -68,10 +79,13 @@ unicode_script = "devanagari"
 </details>
 </div>
 
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 आस्वादवद्भिः कवलैस् तृणानाङ्,  
 कण्डूयनैर्, दंश-निवारणैश् च ।  
 अव्याहतैस् स्वैर-गतैस् - स तस्याः  
 सम्राट् **समाराधन-तत्-परो ऽभूत्** ॥ ५ ॥ +++(र५ अ५)+++    
+</details>
 
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/05.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
@@ -80,10 +94,13 @@ unicode_script = "devanagari"
 </details>
 </div>
 
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 स्थितः स्थिताम्, उच्चलितः प्रयातान्,  
 निषेदुषीम् आसन-बन्ध-धीरः ।  
 जलाभिलाषी जलम् आदधानाञ् -  
 छायेव ताम् **भूपतिर् अन्वगच्छत्** ॥ ६ ॥ +++(र५ अ५)+++    
+</details>
 
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/06.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
@@ -94,10 +111,13 @@ unicode_script = "devanagari"
 
 ### धीरगतिः
 
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 स न्यस्त-चिह्नाम् अपि **राज-लक्ष्मीन्**  
 तेजो-विशेषानुमितान् **दधानः** ।  
 **आसीद्** अनाविष्कृत-दानराजिर्  
 अन्तर्-मदावस्थ इव द्विपेन्द्रः ॥ ७ ॥  
+</details>
 
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/07.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
@@ -106,11 +126,13 @@ unicode_script = "devanagari"
 </details>
 </div>
 
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 लता-प्र-तान+++(=प्रवाल)++++उद्ग्रथितैः स केशैर्  
 **अधिज्य-धन्वा विचचार** दावम्+++(=वनम्)+++ ।  
 रक्षापदेशान् मुनि-होम-धेनोर्  
 वन्यान् +++(दुष्टताया)+++ **वि-नेष्यन्न् इव** दुष्ट-सत्त्वान् ॥ ८ ॥ +++(4)+++  
+</details>
 
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/08.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
@@ -122,10 +144,13 @@ unicode_script = "devanagari"
 
 ### वनदेवतापूजा
 
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 विसृष्ट-पार्श्वानुचरस्य तस्य  
 **पार्श्व-द्रुमाः** पाश-भृता+++(=वरुणेन)+++ समस्य ।  
 **उदीरयाम् आसुर्** इवोन्मदानाम्  
 **आलोक-शब्दव्ँ** वयसाव्ँ विरावैः ॥ ९ ॥  
+</details>
 
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/09.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
@@ -134,11 +159,13 @@ unicode_script = "devanagari"
 </details>
 </div>
 
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 मरुत्-प्रयुक्ताश् च मरुत्-सखा+++(=अग्नि)+++ऽऽभन्  
 तम् अर्च्यम् आराद् अभिवर्तमानम् ।  
 **अवाकिरन् बाल-लताः** प्रसूनैर्  
 आचार-लाजैर् इव पौर-कन्याः ॥ १० ॥  
+</details>
 
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/10.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
@@ -148,11 +175,13 @@ unicode_script = "devanagari"
 </div>
 <div caption="वेदभूमिपाठः" class="audioEmbed" src="https://archive.org/download/Raghuvamsha-mUlam-vedabhoomi.org/Raghuvamsha-Sarga02-11-20.mp3"></div>
 
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 धनुर्-भृतो ऽप्य् अस्य दयार्द्र-भावम्  
 आख्यातम् अन्तः-करणैर् विशङ्कैः ।  
 विलोकयन्त्यो +++(राज-)+++वपुर् **आपुर् अक्ष्णाम्**  
 **प्रकाम-विस्तार-फलं हरिण्यः** ॥ ११ ॥  
+</details>
 
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/11.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
@@ -161,11 +190,13 @@ unicode_script = "devanagari"
 </details>
 </div>
 
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 स कीचकैर् मारुत-पूर्ण-रन्ध्रैः  
 कूजद्भिर् आपादित-वंश-कृत्यम् ।  
 **शुश्राव** कुञ्जेषु **यशस्** स्वम् उच्चैर्  
 उद्गीयमानव्ँ वनदेवताभिः ॥ १२ ॥ +++(5 वंशे श्लेषः)+++  
+</details>
 
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/12.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
@@ -175,11 +206,13 @@ unicode_script = "devanagari"
 </details>
 </div>
 
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 पृक्तस् तुषारैर् गिरि-निर्झराणाम्  
 अन्-ओक-हा+++(=वृक्ष)+++--कम्पित-पुष्पगन्धी ।  
 तम् आतप-क्लान्तम् अनातपत्रम्  
 आचार-पूतम् **पवनस् सिषेवे** ॥ १३ ॥  
+</details>
 
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/13.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
@@ -188,11 +221,13 @@ unicode_script = "devanagari"
 </details>
 </div>
 
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 **शशाम** वृष्ट्यापि विना **दवाग्निर्**+++(5)+++  
 **आसीद्** विशेषा **फल-पुष्प-वृद्धिः** ।  
 **ऊनन् न** सत्त्वेष्व् **अधिको बबाधे**  
 तस्मिन् वनङ् गोप्तरि गाहमाने ॥ १४ ॥+++(5)+++  
+</details>
 
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/14.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
@@ -201,11 +236,13 @@ unicode_script = "devanagari"
 </details>
 </div>
 
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 **सञ्चार-पूतानि** दिग्-अन्तराणि  
 **कृत्वा** दिनान्ते **निलयाय गन्तुम्** ।  
 **प्रचक्रमे** पल्लव-राग-ताम्रा  
 प्रभा पतङ्गस्य मुनेश् च धेनुः ॥ १५ ॥+++(5)+++  
+</details>
 
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/15.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
@@ -214,11 +251,13 @@ unicode_script = "devanagari"
 </details>
 </div>
 
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 तान् देवता-पित्र्-अतिथि-क्रियार्थाम्  
 **अन्वग् ययौ** मध्यम-लोकपालः ।  
 **बभौ** च **सा** तेन सताम् मतेन  
 श्रद्धेव साक्षाद् विधिनोपपन्ना ॥ १६ ॥+++(5)+++  
+</details>
 
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/16.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
@@ -227,11 +266,13 @@ unicode_script = "devanagari"
 </details>
 </div>
 
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 स पल्वलोत्तीर्ण-वराह-यूथान्य्  
 आवास-वृक्षोन्मुख-बर्हिणानि ।  
 **ययौ** मृगाध्यासित-शाद्वलानि  
 श्यामायमानानि वनानि **पश्यन्** ॥ १७ ॥  
+</details>
 
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/17.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
@@ -240,11 +281,13 @@ unicode_script = "devanagari"
 </details>
 </div>
 
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 आपीनभारोद्वहन-प्रयत्नाद्  
 गृष्टिर्+++(=सकृत्प्रसूता गौः)+++, गुरुत्वाद् वपुषो नरेन्द्रः ।  
 उभाव् **अलञ्चक्रतुर् अञ्चिताभ्यान्**  
 तपोवनावृत्ति-पथङ् गताभ्याम् ॥ १८ ॥  
+</details>
 
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/18.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
@@ -253,11 +296,13 @@ unicode_script = "devanagari"
 </details>
 </div>
 
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 वसिष्ठ-धेनोर् अनुयायिनन् **तम्**  
 आवर्तमानव्ँ वनिता वनान्तात् ।  
 **पपौ** निमेषालस-पक्ष्म-पङ्क्तिर्  
 उपोषिताभ्याम् इव **लोचनाभ्याम्** ॥ १९ ॥ +++(5)+++ 
+</details>
 
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/19.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
@@ -266,11 +311,13 @@ unicode_script = "devanagari"
 </details>
 </div>
 
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 पुरस्-कृता वर्त्मनि पार्थिवेन,  
 प्रत्युद्गता पार्थिव-धर्म-पत्न्या ।  
 तद्-अन्तरे सा **विरराज धेनुर्**  
 दिन-क्षपा-मध्य-गतेव सन्ध्या ॥ २० ॥  
+</details>
 
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/20.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
@@ -280,10 +327,13 @@ unicode_script = "devanagari"
 </div>
 <div caption="वेदभूमिपाठः" class="audioEmbed" src="https://archive.org/download/Raghuvamsha-mUlam-vedabhoomi.org/Raghuvamsha-Sarga02-21-33.mp3"></div>
 
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 प्रदक्षिणी-कृत्य पयस्विनीन् तां  
 सुदक्षिणा साक्षत-पात्र-हस्ता ।  
 **प्रणम्य चानर्च** विशालम्  
 अस्याः **शृङ्गान्तरन्** द्वारम् इवार्थ-सिद्धेः ॥ २१ ॥  
+</details>
 
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/21.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
@@ -292,11 +342,13 @@ unicode_script = "devanagari"
 </details>
 </div>
 
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 वत्सोत्सुकापि स्तिमिता सपर्याम्  
 **प्रत्यग्रहीत् सेति ननन्दतुस्** तौ ।  
 भक्त्योपपन्नेषु हि तद्-विधानाम्  
 प्रसाद-चिह्नानि पुरः-फलानि ॥ २२ ॥  
+</details>
 
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/22.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
@@ -305,11 +357,13 @@ unicode_script = "devanagari"
 </details>
 </div>
 
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 गुरोः सदारस्य निपीड्य पादौ  
 समाप्य सान्ध्यञ्च विधिन् दिलीपः ।  
 दोहावसाने पुनर् एव **दोग्ध्रीम्**  
 **भेजे** भुजोच्छिन्न-रिपुर् निषण्णाम् ॥ २३ ॥  
+</details>
 
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/23.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
@@ -318,11 +372,13 @@ unicode_script = "devanagari"
 </details>
 </div>
 
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 ताम् अन्तिक-न्यस्त-बलि-प्रदीपाम्  
 **अन्वास्य** गोप्ता गृहिणीसहायः ।  
 क्रमेण सुप्ताम् **अनुसव्ँविवेश**  
 सुप्तोत्थिताम् प्रातर् **अनूदतिष्ठत्** ॥ २४ ॥  
+</details>
 
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/24.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
@@ -331,11 +387,13 @@ unicode_script = "devanagari"
 </details>
 </div>
 
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 इत्थव्ँ व्रतन् धारयतः प्रजार्थं  
 समम् महिष्या महनीय-कीर्तेः ।  
 सप्त **व्यतीयुस्** त्रिगुणानि तस्य  
 **दिनानि** दीनोद्धरणोचितस्य ॥ २५ ॥  
+</details>
 
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/25.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
@@ -344,11 +402,13 @@ unicode_script = "devanagari"
 </details>
 </div>
 
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अन्येद्युर् आत्मानुचरस्य भावञ्  
 जिज्ञासमाना मुनि-होम-धेनुः ।  
 गङ्गा-प्रपातान्त-विरूढ-शष्पङ्  
 गौरी-गुरोर् **गह्वरम् आविवेश** ॥ २६ ॥  
+</details>
 
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/26.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
@@ -357,11 +417,13 @@ unicode_script = "devanagari"
 </details>
 </div>
 
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 सा दुष्-प्रधर्षा मनसापि हिंस्रैर्  
 इत्य् अद्रि-शोभा-प्रहितेक्षणेन ।  
 अलक्षिताभ्युत्पतनो नृपेण  
 प्रसह्य **सिंहः** किल **ताञ् चकर्ष** ॥ २७ ॥  
+</details>
 
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/27.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
@@ -370,11 +432,13 @@ unicode_script = "devanagari"
 </details>
 </div>
 
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 तदीयम् **आक्रन्दितम्** आर्त-साधोर्  
 गुहा-निबद्ध--प्रति-शब्द-दीर्घम् ।  
 रश्मिष्व् इवादाय नगेन्द्र-सक्तान्  
 **निवर्तयाम् आस** नृपस्य **दृष्टिम्** ॥ २८ ॥  
+</details>
 
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/28.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
@@ -383,11 +447,13 @@ unicode_script = "devanagari"
 </details>
 </div>
 
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 स पाटलायाङ्+++(=रक्तवर्णायां)+++ गवि तस्थिवांसन्  
 धनुर्-धरः **केसरिणन् ददर्श** ।  
 अधित्यकायाम्+++(=उन्नत-भागे)+++ इव धातुमय्याल्ँ  
 +++(पिङ्गल-प्राय-)+++लोध्र-द्रुमं सानु-मतः +++(अद्रेः)+++ प्रफुल्लम् ॥ २९ ॥  
+</details>
 
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/29.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
@@ -396,11 +462,13 @@ unicode_script = "devanagari"
 </details>
 </div>
 
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 ततो मृगेन्द्रस्य मृगेन्द्र-गामी  
 वधाय वध्यस्य **शरं** शरण्यः ।  
 जाताभिषङ्गो+++(=जातपराभवो)+++ नृपतिर् निषङ्गाद्  
 **उद्धर्तुम् ऐच्छत्** प्रसभोद्धृतारिः ॥ ३० ॥  
+</details>
 
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/30.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
@@ -409,11 +477,13 @@ unicode_script = "devanagari"
 </details>
 </div>
 
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 वामेतरस् तस्य करः प्रहर्तुर्  
 नख-प्रभा-भूषित-कङ्क-पत्त्रे ।  
 **सक्ताङ्गुलिः** सायक-पुङ्ख एव  
 **चित्रार्पितारम्भ इवावतस्थे** ॥ ३१ ॥  
+</details>
 
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/31.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
@@ -422,11 +492,13 @@ unicode_script = "devanagari"
 </details>
 </div>
 
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 बाहु-प्रतिष्टम्भ-विवृद्ध-मन्युर्  
 अभ्यर्णम् आगस्-कृतम् अस्पृशद्भिः ।  
 **राजा** स्व-तेजोभिर् **अदह्यतान्तर्**  
 भोगीव मन्त्रौषधि-रुद्ध-वीर्यः ॥ ३२ ॥  
+</details>
 
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/32.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
@@ -435,11 +507,13 @@ unicode_script = "devanagari"
 </details>
 </div>
 
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 तम् आर्य-गृह्यन् निगृहीत-धेनुर्  
 **मनुष्य-वाचा** मनु-वंश-केतुम् ।  
 **विस्माययन्** विस्मितम् आत्मवृत्तौ   
 सिंहोरुसत्त्वन् +++(राजानं)+++ **निजगाद सिंहः** ॥ ३३ ॥  
+</details>
 
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/33.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
@@ -449,11 +523,13 @@ unicode_script = "devanagari"
 </div>
 <div caption="वेदभूमिपाठः" class="audioEmbed" src="https://archive.org/download/Raghuvamsha-mUlam-vedabhoomi.org/Raghuvamsha-Sarga02-34-45.mp3"></div>
 
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 **अलम्** महीपाल तव **श्रमेण**  
 प्रयुक्तम् अप्य् **अस्त्रम्** इतो **वृथा स्यात्** ।  
 न पादपोन्मूलन-शक्ति **रंहः**  
 **शिलोच्चये मूर्छति** मारुतस्य ॥ ३४ ॥  
+</details>
 
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/34.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
@@ -462,11 +538,13 @@ unicode_script = "devanagari"
 </details>
 </div>
 
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 कैलास-गौरव्ँ वृषम् आरुरुक्षोः  
 पादार्पणानुग्रह-पूत-पृष्टम् ।  
 **अवेहि माङ्** किङ्करम् अष्ट-मूर्तेः  
 कुम्भोदरन् नाम निकुम्भ-मित्रम् ॥ ३५ ॥  
+</details>
 
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/35.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
@@ -475,11 +553,13 @@ unicode_script = "devanagari"
 </details>
 </div>
 
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अमुम् पुरः **पश्यसि देव-दारुम्**  
 पुत्री-कृतो ऽसौ वृषभ-ध्वजेन ।  
 यो हेम-कुम्भ-स्तन-निःसृतानां  
 स्कन्दस्य मातुः पयसार्ँ रसज्ञः ॥ ३६ ॥  
+</details>
 
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/36.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
@@ -488,11 +568,13 @@ unicode_script = "devanagari"
 </details>
 </div>
 
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 कण्डूयमानेन कटङ् कदाचिद्  
 वन्य-द्विपेनोन्मथिता त्वग् अस्य ।  
 **अथैनम्** अद्रेस् तनया **शुशोच**  
 सेनान्यम् आलीढम् इवासुरास्त्रैः ॥ ३७ ॥  
+</details>
 
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/37.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
@@ -503,12 +585,10 @@ unicode_script = "devanagari"
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-
 तदा प्रभृत्येव वनद्विपानान् त्रासार्थम् अस्मिन्नहम् अदिकुक्षौ ।  
 व्यापारितः शूलभृता विधाय सिंहत्वम् अङ्कागतसत्त्ववृत्ति ॥ ३८ ॥
 </details>
 <details><summary>मूलम्</summary>
-
 
 तदा प्रभृत्येव वनद्विपानान् त्रासार्थम् अस्मिन्नहम् अदिकुक्षौ ।  
 व्यापारितः शूलभृता विधाय सिंहत्वम् अङ्कागतसत्त्ववृत्ति ॥ ३८ ॥
@@ -523,12 +603,10 @@ unicode_script = "devanagari"
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-
 तस्यालम् एषा क्षुधितस्य तृप्त्यै प्रदिष्टकाला परमेश्वरेण ।  
 उपस्थिता शोणितपारणा मे सुरद्विषश्चान्द्रमसी सुधेव ॥ ३९ ॥
 </details>
 <details><summary>मूलम्</summary>
-
 
 तस्यालम् एषा क्षुधितस्य तृप्त्यै प्रदिष्टकाला परमेश्वरेण ।  
 उपस्थिता शोणितपारणा मे सुरद्विषश्चान्द्रमसी सुधेव ॥ ३९ ॥
@@ -542,12 +620,10 @@ unicode_script = "devanagari"
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-
 स त्वन् निवर्तस्व विहाय लज्जाङ् गुरोर्भवान्दर्शितशिष्यभक्तिः ।  
 शस्त्रेण रक्ष्यय्ँ यदशक्यरक्षन् न तद्यशः शस्त्रभृताङ् क्षिणोति ॥ ४० ॥
 </details>
 <details><summary>मूलम्</summary>
-
 
 स त्वन् निवर्तस्व विहाय लज्जाङ् गुरोर्भवान्दर्शितशिष्यभक्तिः ।  
 शस्त्रेण रक्ष्यय्ँ यदशक्यरक्षन् न तद्यशः शस्त्रभृताङ् क्षिणोति ॥ ४० ॥
@@ -561,12 +637,10 @@ unicode_script = "devanagari"
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-
 इति प्रगल्भम् पुरुसाधिराजो मृगाधिराजस्य वचो निशम्य ।  
 प्रत्याहतास्त्रो गिरिशप्रभावादात्मन्यवज्ञां शिथिलीचकार ॥ ४१ ॥
 </details>
 <details><summary>मूलम्</summary>
-
 
 इति प्रगल्भम् पुरुसाधिराजो मृगाधिराजस्य वचो निशम्य ।  
 प्रत्याहतास्त्रो गिरिशप्रभावादात्मन्यवज्ञां शिथिलीचकार ॥ ४१ ॥
@@ -581,12 +655,10 @@ unicode_script = "devanagari"
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-
 प्रत्यब्रवीच्चैनम् इषुप्रयोगे तत्पूर्वसङ्गे वितथप्रयत्नः ।  
 जडीकृतस्त्र्यम्बकविक्षणेन वज्रम् मुमुक्षन्निव वज्रपाणिः ॥ ४२ ॥
 </details>
 <details><summary>मूलम्</summary>
-
 
 प्रत्यब्रवीच्चैनम् इषुप्रयोगे तत्पूर्वसङ्गे वितथप्रयत्नः ।  
 जडीकृतस्त्र्यम्बकविक्षणेन वज्रम् मुमुक्षन्निव वज्रपाणिः ॥ ४२ ॥
@@ -600,7 +672,6 @@ unicode_script = "devanagari"
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-
 प्रत्याह वैनं शरमोक्षवन्ध्यो मा पत्त्रपर्वात्स्वरभेदम् आप्तः ।  
 प्रहीणपूर्वध्वनिनाधिरूढस्तुलाम् असारेन शरद्घनेन ॥ ४२* ॥
 
@@ -608,7 +679,6 @@ unicode_script = "devanagari"
 अन्तर्गतम् प्राणभृतां हि वेद सर्वम् भवान्भावम् अतोऽभिधास्ये ॥ ४३ ॥
 </details>
 <details><summary>मूलम्</summary>
-
 
 प्रत्याह वैनं शरमोक्षवन्ध्यो मा पत्त्रपर्वात्स्वरभेदम् आप्तः ।  
 प्रहीणपूर्वध्वनिनाधिरूढस्तुलाम् असारेन शरद्घनेन ॥ ४२* ॥
@@ -625,12 +695,10 @@ unicode_script = "devanagari"
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-
 मान्यः स मे स्थावरजङ्गमानां सर्गस्थितिप्रत्यवहारहेतुः ।  
 गुरोरपीदन् धनम् आहिताग्नेर्नश्यत्पुरस्तादनुपेक्षणीयम् ॥ ४४ ॥
 </details>
 <details><summary>मूलम्</summary>
-
 
 मान्यः स मे स्थावरजङ्गमानां सर्गस्थितिप्रत्यवहारहेतुः ।  
 गुरोरपीदन् धनम् आहिताग्नेर्नश्यत्पुरस्तादनुपेक्षणीयम् ॥ ४४ ॥
@@ -644,12 +712,10 @@ unicode_script = "devanagari"
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-
 स त्वम् मदीयेन शरीरवृत्तिन् देहेन निर्वर्तयितुम् प्रसीद ।  
 दिनावसानोत्सुकबालवत्सा विसृज्यतान् धेनुरियम् महर्षेः ॥ ४५ ॥
 </details>
 <details><summary>मूलम्</summary>
-
 
 स त्वम् मदीयेन शरीरवृत्तिन् देहेन निर्वर्तयितुम् प्रसीद ।  
 दिनावसानोत्सुकबालवत्सा विसृज्यतान् धेनुरियम् महर्षेः ॥ ४५ ॥
@@ -664,12 +730,10 @@ unicode_script = "devanagari"
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-
 अथान्धकारङ् गिरिगह्वराणान् दंष्ट्रामयूखैः शकलानि कुर्वन् ।  
 भूयः स भूतेश्वरपार्श्ववर्ती किञ्चिद्विहस्यार्थपतिम् बभाषे ॥ ४६ ॥
 </details>
 <details><summary>मूलम्</summary>
-
 
 अथान्धकारङ् गिरिगह्वराणान् दंष्ट्रामयूखैः शकलानि कुर्वन् ।  
 भूयः स भूतेश्वरपार्श्ववर्ती किञ्चिद्विहस्यार्थपतिम् बभाषे ॥ ४६ ॥
@@ -683,12 +747,10 @@ unicode_script = "devanagari"
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-
 एकातपत्रञ् जगतः प्रभुत्वन् नवय्ँ ययः कान्तम् इदव्ँ वपुश्च ।  
 अल्पस्य हेतोर्बहु हातुम् इच्छन्विचारमूधः प्रतिभासि मे त्वम् ॥ ४७ ॥
 </details>
 <details><summary>मूलम्</summary>
-
 
 एकातपत्रञ् जगतः प्रभुत्वन् नवय्ँ ययः कान्तम् इदव्ँ वपुश्च ।  
 अल्पस्य हेतोर्बहु हातुम् इच्छन्विचारमूधः प्रतिभासि मे त्वम् ॥ ४७ ॥
@@ -702,12 +764,10 @@ unicode_script = "devanagari"
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-
 भूतानुकम्पा तव चेदियङ् गौरेका भवेत्स्वस्तिमती त्वदन्ते ।  
 जीवन्पुनः शश्वदुपप्लवेभ्यः प्रजाः प्रजानाथ पितेव पासि ॥ ४८ ॥
 </details>
 <details><summary>मूलम्</summary>
-
 
 भूतानुकम्पा तव चेदियङ् गौरेका भवेत्स्वस्तिमती त्वदन्ते ।  
 जीवन्पुनः शश्वदुपप्लवेभ्यः प्रजाः प्रजानाथ पितेव पासि ॥ ४८ ॥
@@ -721,12 +781,10 @@ unicode_script = "devanagari"
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-
 अथैकधेनोरपराधचण्डाद्गुरोः कृषानुप्रतिमाद्बिभेषि ।  
 शक्योऽस्य मन्युर्भवता विनेतुङ् गाः कोटिशः स्पर्शयता घटोध्नीः ॥ ४९ ॥
 </details>
 <details><summary>मूलम्</summary>
-
 
 अथैकधेनोरपराधचण्डाद्गुरोः कृषानुप्रतिमाद्बिभेषि ।  
 शक्योऽस्य मन्युर्भवता विनेतुङ् गाः कोटिशः स्पर्शयता घटोध्नीः ॥ ४९ ॥
@@ -740,12 +798,10 @@ unicode_script = "devanagari"
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-
 तद्रक्ष कल्याणपरम्पराणाम् भोक्तारम् ऊर्जस्वलम् आत्मदेहम् ।  
 महीतलस्पर्शनमात्रभिन्नम् ऋद्धं हि राज्यम् पदम् ऐन्द्रम् आहुः ॥ ५० ॥
 </details>
 <details><summary>मूलम्</summary>
-
 
 तद्रक्ष कल्याणपरम्पराणाम् भोक्तारम् ऊर्जस्वलम् आत्मदेहम् ।  
 महीतलस्पर्शनमात्रभिन्नम् ऋद्धं हि राज्यम् पदम् ऐन्द्रम् आहुः ॥ ५० ॥
@@ -759,12 +815,10 @@ unicode_script = "devanagari"
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-
 एतावदुक्त्वा विरते मृगेन्द्रे प्रतिस्वनेनास्य गुहागतेन ।  
 शिलोच्चयोऽपि क्षितिपालम् उच्चैः प्रीत्या तम् एवार्थम् अभाषतेव ॥ ५१ ॥
 </details>
 <details><summary>मूलम्</summary>
-
 
 एतावदुक्त्वा विरते मृगेन्द्रे प्रतिस्वनेनास्य गुहागतेन ।  
 शिलोच्चयोऽपि क्षितिपालम् उच्चैः प्रीत्या तम् एवार्थम् अभाषतेव ॥ ५१ ॥
@@ -778,12 +832,10 @@ unicode_script = "devanagari"
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-
 निशम्य देवानुचरस्य वाचम् मनुष्यदेवः पुनरप्युवाच ।  
 धेन्वा तदध्यासितकातराक्ष्या निरीक्ष्यमाणः सुतरान् दयालुः ॥ ५२ ॥
 </details>
 <details><summary>मूलम्</summary>
-
 
 निशम्य देवानुचरस्य वाचम् मनुष्यदेवः पुनरप्युवाच ।  
 धेन्वा तदध्यासितकातराक्ष्या निरीक्ष्यमाणः सुतरान् दयालुः ॥ ५२ ॥
@@ -797,12 +849,10 @@ unicode_script = "devanagari"
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-
 क्षतात्किल त्रायत इत्युदग्रः क्षत्रस्य शब्दो भुवनेषु रूढः ।  
 राज्येन किन् तद्विपरीतवृत्तेः प्राणैरुपक्रोशमलीमसैर्वा ॥ ५३ ॥
 </details>
 <details><summary>मूलम्</summary>
-
 
 क्षतात्किल त्रायत इत्युदग्रः क्षत्रस्य शब्दो भुवनेषु रूढः ।  
 राज्येन किन् तद्विपरीतवृत्तेः प्राणैरुपक्रोशमलीमसैर्वा ॥ ५३ ॥
@@ -816,12 +866,10 @@ unicode_script = "devanagari"
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-
 कथन् नु शक्योऽनुनयो महर्षेर्विश्राणनाच्चान्यपयस्विनीनम्।  
 इमाम् अनूनां सुरभेरवेहि रुद्रौजसा तु पहृतन् त्वयास्याम् ॥ ५४ ॥
 </details>
 <details><summary>मूलम्</summary>
-
 
 कथन् नु शक्योऽनुनयो महर्षेर्विश्राणनाच्चान्यपयस्विनीनम्।  
 इमाम् अनूनां सुरभेरवेहि रुद्रौजसा तु पहृतन् त्वयास्याम् ॥ ५४ ॥
@@ -835,12 +883,10 @@ unicode_script = "devanagari"
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-
 सेयं स्वदेहार्पणनिष्क्रयेण न्याय्या मया मोचयितुम् भवत्तः ।  
 न पारणा स्याद्विहता तवैवम् भवेदलुप्तश्च मुनेः क्रियार्थः ॥ ५५ ॥
 </details>
 <details><summary>मूलम्</summary>
-
 
 सेयं स्वदेहार्पणनिष्क्रयेण न्याय्या मया मोचयितुम् भवत्तः ।  
 न पारणा स्याद्विहता तवैवम् भवेदलुप्तश्च मुनेः क्रियार्थः ॥ ५५ ॥
@@ -855,12 +901,10 @@ unicode_script = "devanagari"
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-
 भवानपीदम् परवानवैति महान्हि यत्नस्तव देवदारौ ।  
 स्थातुन् नियोक्तुर्न हि शक्यम् अग्रे विनाश्य रक्ष्यं स्वयम् अक्षतेन ॥ ५६ ॥
 </details>
 <details><summary>मूलम्</summary>
-
 
 भवानपीदम् परवानवैति महान्हि यत्नस्तव देवदारौ ।  
 स्थातुन् नियोक्तुर्न हि शक्यम् अग्रे विनाश्य रक्ष्यं स्वयम् अक्षतेन ॥ ५६ ॥
@@ -874,12 +918,10 @@ unicode_script = "devanagari"
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-
 किम् अप्यहिंस्यस्तव चेन्मतोऽहय्ँ यशःशरीरे भव मे दयालुः ।  
 एकान्तविधंसिषु मद्विधानाम् पिण्डेष्वनास्था खलु भौतिकेषु ॥ ५७ ॥
 </details>
 <details><summary>मूलम्</summary>
-
 
 किम् अप्यहिंस्यस्तव चेन्मतोऽहय्ँ यशःशरीरे भव मे दयालुः ।  
 एकान्तविधंसिषु मद्विधानाम् पिण्डेष्वनास्था खलु भौतिकेषु ॥ ५७ ॥
@@ -893,12 +935,10 @@ unicode_script = "devanagari"
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-
 सम्बन्धम् आभाषणपूर्वम् आहुर्वृत्तः स नौ सङ्गतयोर्वनान्ते ।  
 तद्भूतनाथानुग नार्हसि त्वं सम्बन्धिनो मे प्रणयव्ँ विहन्तुम् ॥ ५८ ॥
 </details>
 <details><summary>मूलम्</summary>
-
 
 सम्बन्धम् आभाषणपूर्वम् आहुर्वृत्तः स नौ सङ्गतयोर्वनान्ते ।  
 तद्भूतनाथानुग नार्हसि त्वं सम्बन्धिनो मे प्रणयव्ँ विहन्तुम् ॥ ५८ ॥
@@ -912,12 +952,10 @@ unicode_script = "devanagari"
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-
 तथेति गाम् उक्तवते दिलीपः सद्यः प्रतिष्टम्भविमुक्तबाहुः ।  
 स न्यस्त शस्त्रो हरये स्वदेहम् उपानयत्पिण्डम् इवामिषस्य ॥ ५९ ॥
 </details>
 <details><summary>मूलम्</summary>
-
 
 तथेति गाम् उक्तवते दिलीपः सद्यः प्रतिष्टम्भविमुक्तबाहुः ।  
 स न्यस्त शस्त्रो हरये स्वदेहम् उपानयत्पिण्डम् इवामिषस्य ॥ ५९ ॥
@@ -931,12 +969,10 @@ unicode_script = "devanagari"
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-
 तस्मिन्क्षणे पालयितुः प्रजानाम् उत्पश्यतः सिंहनिपातम् उग्रम् ।  
 अवाङ्मुखस्य्ऽओपरि पुष्पवृष्टिः पपात विद्याधरहस्तमुक्ता ॥ ६० ॥
 </details>
 <details><summary>मूलम्</summary>
-
 
 तस्मिन्क्षणे पालयितुः प्रजानाम् उत्पश्यतः सिंहनिपातम् उग्रम् ।  
 अवाङ्मुखस्य्ऽओपरि पुष्पवृष्टिः पपात विद्याधरहस्तमुक्ता ॥ ६० ॥
@@ -950,12 +986,10 @@ unicode_script = "devanagari"
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-
 उत्तिष्ठ वत्सेत्यमृतायमानव्ँ वचो निशम्योत्थितम् उत्थितः सन् ।  
 ददर्श राजा जननीम् इव स्वाङ् गाम् अग्रतः प्रस्रविणीन् न सिंहम् ॥ ६१ ॥
 </details>
 <details><summary>मूलम्</summary>
-
 
 उत्तिष्ठ वत्सेत्यमृतायमानव्ँ वचो निशम्योत्थितम् उत्थितः सन् ।  
 ददर्श राजा जननीम् इव स्वाङ् गाम् अग्रतः प्रस्रविणीन् न सिंहम् ॥ ६१ ॥
@@ -969,12 +1003,10 @@ unicode_script = "devanagari"
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-
 तव्ँ विस्मितन् धेनुरुवाच साधो मायाम् मयोध्भाव्य परीक्षितोऽसि ।  
 ऋषिप्रभावान्मयि नान्तकोऽपि प्रभुः प्रहर्तुङ् किम् उतान्यहिंस्राः ॥ ६२ ॥
 </details>
 <details><summary>मूलम्</summary>
-
 
 तव्ँ विस्मितन् धेनुरुवाच साधो मायाम् मयोध्भाव्य परीक्षितोऽसि ।  
 ऋषिप्रभावान्मयि नान्तकोऽपि प्रभुः प्रहर्तुङ् किम् उतान्यहिंस्राः ॥ ६२ ॥
@@ -988,12 +1020,10 @@ unicode_script = "devanagari"
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-
 भक्त्या गुरौ मय्यनुकम्पाय च प्रीतास्मि ते पुत्र वरव्ँ वृणीष्व ।  
 न केवलानाम् पयसाम् प्रसूतिम् अवेहि माङ् कामदुघाम् प्रसन्नाम् ॥ ६३ ॥
 </details>
 <details><summary>मूलम्</summary>
-
 
 भक्त्या गुरौ मय्यनुकम्पाय च प्रीतास्मि ते पुत्र वरव्ँ वृणीष्व ।  
 न केवलानाम् पयसाम् प्रसूतिम् अवेहि माङ् कामदुघाम् प्रसन्नाम् ॥ ६३ ॥
@@ -1007,12 +1037,10 @@ unicode_script = "devanagari"
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-
 ततः समानीय समानितार्थी हस्तौ स्वहस्तार्जितवीरशब्दः ।  
 वंशस्य कर्तारम् अनन्तकीर्तिं सुदक्षिणायान् तनयय्ँ ययाचे ॥ ६४ ॥
 </details>
 <details><summary>मूलम्</summary>
-
 
 ततः समानीय समानितार्थी हस्तौ स्वहस्तार्जितवीरशब्दः ।  
 वंशस्य कर्तारम् अनन्तकीर्तिं सुदक्षिणायान् तनयय्ँ ययाचे ॥ ६४ ॥
@@ -1026,12 +1054,10 @@ unicode_script = "devanagari"
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-
 सन्तानकामाय तथेति कामर्ँ राज्ञे प्रतिश्रुत्य पयस्विनी सा ।  
 दुग्ध्वा पयः पत्त्रपुटे मदीयम् पुत्र्ऽ ओपभुङ्क्ष्व्ऽ एति तम् आदिदेश ॥ ६५ ॥
 </details>
 <details><summary>मूलम्</summary>
-
 
 सन्तानकामाय तथेति कामर्ँ राज्ञे प्रतिश्रुत्य पयस्विनी सा ।  
 दुग्ध्वा पयः पत्त्रपुटे मदीयम् पुत्र्ऽ ओपभुङ्क्ष्व्ऽ एति तम् आदिदेश ॥ ६५ ॥
@@ -1045,12 +1071,10 @@ unicode_script = "devanagari"
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-
 वत्सस्य ह्ॐआर्थविधेश्च शेषम् ऋषेरनुज्ञाम् अधिगम्य मातः ।  
 ऊधस्यम् इच्छामि तवोपभोक्तुम्यं षष्ठाम्शम् उर्व्या इव रक्षितायाः ॥ ६६ ॥
 </details>
 <details><summary>मूलम्</summary>
-
 
 वत्सस्य ह्ॐआर्थविधेश्च शेषम् ऋषेरनुज्ञाम् अधिगम्य मातः ।  
 ऊधस्यम् इच्छामि तवोपभोक्तुम्यं षष्ठाम्शम् उर्व्या इव रक्षितायाः ॥ ६६ ॥
@@ -1064,12 +1088,10 @@ unicode_script = "devanagari"
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-
 इत्थङ् क्षितीशेन वसिष्ठधेनुर्विज्ञापिता प्रीततरा बभूव ।  
 तदन्विता हैमवताच्च कुक्षेः प्रत्याययावाश्रमम् अश्रमेण ॥ ६७ ॥
 </details>
 <details><summary>मूलम्</summary>
-
 
 इत्थङ् क्षितीशेन वसिष्ठधेनुर्विज्ञापिता प्रीततरा बभूव ।  
 तदन्विता हैमवताच्च कुक्षेः प्रत्याययावाश्रमम् अश्रमेण ॥ ६७ ॥
@@ -1083,12 +1105,10 @@ unicode_script = "devanagari"
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-
 तस्याः प्रसन्नेन्दुमुखः प्रसादङ् गुरुर्नृपाणाङ् गुरवे निवेद्य ।  
 प्रहर्षचिह्नानुमितम् प्रियायै शशंस वाचा पुनरुक्तयेव ॥ ६८ ॥
 </details>
 <details><summary>मूलम्</summary>
-
 
 तस्याः प्रसन्नेन्दुमुखः प्रसादङ् गुरुर्नृपाणाङ् गुरवे निवेद्य ।  
 प्रहर्षचिह्नानुमितम् प्रियायै शशंस वाचा पुनरुक्तयेव ॥ ६८ ॥
@@ -1102,12 +1122,10 @@ unicode_script = "devanagari"
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-
 स नन्दिनीस्तन्यम् अनिन्दितात्मा सद्वत्सलो वत्सहुतावशेषम् ।  
 पपौ वसिष्ठेन कृताभ्यनुज्ञः शुभ्रय्ँ यशो मूर्तम् इवातितृष्णः ॥ ६९ ॥
 </details>
 <details><summary>मूलम्</summary>
-
 
 स नन्दिनीस्तन्यम् अनिन्दितात्मा सद्वत्सलो वत्सहुतावशेषम् ।  
 पपौ वसिष्ठेन कृताभ्यनुज्ञः शुभ्रय्ँ यशो मूर्तम् इवातितृष्णः ॥ ६९ ॥
@@ -1121,12 +1139,10 @@ unicode_script = "devanagari"
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-
 प्रातर्यथोक्तव्रतपारणान्ते प्रास्थानिकं स्वस्त्ययनम् प्रयुज ।  
 तौ दम्पती स्वाम् प्रति राजधानीम् प्रस्थापयाम् आस वशी वसिष्ठः ॥ ७० ॥
 </details>
 <details><summary>मूलम्</summary>
-
 
 प्रातर्यथोक्तव्रतपारणान्ते प्रास्थानिकं स्वस्त्ययनम् प्रयुज ।  
 तौ दम्पती स्वाम् प्रति राजधानीम् प्रस्थापयाम् आस वशी वसिष्ठः ॥ ७० ॥
@@ -1140,12 +1156,10 @@ unicode_script = "devanagari"
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-
 प्रदक्षिणीकृत्य हुतं हुताशम् अनन्तरम् भर्तुररुन्धतीञ् च ।  
 धेनुं सवत्साञ् च नृपः प्रतस्थे सन्मङ्गलोदग्रतरप्रभावः ॥ ७१ ॥
 </details>
 <details><summary>मूलम्</summary>
-
 
 प्रदक्षिणीकृत्य हुतं हुताशम् अनन्तरम् भर्तुररुन्धतीञ् च ।  
 धेनुं सवत्साञ् च नृपः प्रतस्थे सन्मङ्गलोदग्रतरप्रभावः ॥ ७१ ॥
@@ -1159,12 +1173,10 @@ unicode_script = "devanagari"
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-
 श्रोताभिरामध्वनिना रथेन स धर्मपत्नीसहितः सहिष्णुः ।  
 ययावनुद्घातसुखेन मार्गं स्वेनेव पूर्णेन मनोरथेन ॥ ७२ ॥
 </details>
 <details><summary>मूलम्</summary>
-
 
 श्रोताभिरामध्वनिना रथेन स धर्मपत्नीसहितः सहिष्णुः ।  
 ययावनुद्घातसुखेन मार्गं स्वेनेव पूर्णेन मनोरथेन ॥ ७२ ॥
@@ -1178,12 +1190,10 @@ unicode_script = "devanagari"
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-
 तम् आहितौत्सुक्यम् अदर्शनेन प्रजाः प्रजार्थव्रतकर्शिताङ्गम् ।  
 नेत्रैः पपुस्तृप्तिम् अनाप्नुवद्भिर्नवोदयन् नाथम् इवौषधीनाम् ॥ ७३ ॥
 </details>
 <details><summary>मूलम्</summary>
-
 
 तम् आहितौत्सुक्यम् अदर्शनेन प्रजाः प्रजार्थव्रतकर्शिताङ्गम् ।  
 नेत्रैः पपुस्तृप्तिम् अनाप्नुवद्भिर्नवोदयन् नाथम् इवौषधीनाम् ॥ ७३ ॥
@@ -1197,12 +1207,10 @@ unicode_script = "devanagari"
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-
 पुरन्दरश्रीः पुरम् उत्पताकम् प्रविश्य पौरैरभिनन्द्यमानः ।  
 भुजे भुअङ्गेन्द्रसमानसारे भूयः स भूमेर्धुरम् आससञ्ज ॥ ७४ ॥
 </details>
 <details><summary>मूलम्</summary>
-
 
 पुरन्दरश्रीः पुरम् उत्पताकम् प्रविश्य पौरैरभिनन्द्यमानः ।  
 भुजे भुअङ्गेन्द्रसमानसारे भूयः स भूमेर्धुरम् आससञ्ज ॥ ७४ ॥
@@ -1216,12 +1224,10 @@ unicode_script = "devanagari"
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-
 अथ नयनसमुत्थञ् ज्योतिरत्रेरिव द्यौः सुरसरिदिव तेजो वह्निनिष्ठ्यूतम् ऐशम् ।  
 नरपतिकुलभूत्यै गर्भम् आधत्त राज्ञी गुरुभिरभिनिविष्टल्ँ लोकपालानुभावैः ॥ ७५ ॥
 </details>
 <details><summary>मूलम्</summary>
-
 
 अथ नयनसमुत्थञ् ज्योतिरत्रेरिव द्यौः सुरसरिदिव तेजो वह्निनिष्ठ्यूतम् ऐशम् ।  
 नरपतिकुलभूत्यै गर्भम् आधत्त राज्ञी गुरुभिरभिनिविष्टल्ँ लोकपालानुभावैः ॥ ७५ ॥
