--- a/laxyam/padyam/kAlidAsaH/raghuvaMsham/sarva-prastutiH/02.md
+++ b/laxyam/padyam/kAlidAsaH/raghuvaMsham/sarva-prastutiH/02.md
@@ -585,12 +585,14 @@ unicode_script = "devanagari"
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-तदा प्रभृत्येव वनद्विपानान् त्रासार्थम् अस्मिन्नहम् अदिकुक्षौ ।  
-व्यापारितः शूलभृता विधाय सिंहत्वम् अङ्कागतसत्त्ववृत्ति ॥ ३८ ॥
+तदा प्रभृत्य् एव वनद्विपानान्  
+त्रासार्थम् अस्मिन्न् अहम् अद्रिकुक्षौ ।  
+व्यापारितः शूलभृता विधाय  
+सिंहत्वम् अङ्कागत-सत्त्व-वृत्ति ॥ ३८ ॥
 </details>
 <details><summary>मूलम्</summary>
 
-तदा प्रभृत्येव वनद्विपानान् त्रासार्थम् अस्मिन्नहम् अदिकुक्षौ ।  
+तदा प्रभृत्येव वनद्विपानान् त्रासार्थम् अस्मिन्नहम् अद्रिकुक्षौ ।  
 व्यापारितः शूलभृता विधाय सिंहत्वम् अङ्कागतसत्त्ववृत्ति ॥ ३८ ॥
 </details>  
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/38.md">
